Revision history for URI

{{$NEXT}}

5.27      2024-02-09 15:01:24Z
    - Add missing NAME section to POD of URI::geo (GH#142) (gregor herrmann)

5.26      2024-02-02 19:04:40Z
    - Add URI::geo (GH#141) (david-dick)

5.25      2024-01-27 16:11:41Z
    - cache scheme so it never attempt to load it again (GH#55) (mschae94)

5.24      2024-01-26 04:36:32Z
    - Really revert "use Scalar::Util::reftype instead of ref to check for
      ARRAY" (GH#136) (Olaf Alders)

5.23      2024-01-25 21:02:18Z
    - Revert the reftype change introduced in 5.22 as it causes warnings.
      (GH#134) (Olaf Alders)

5.22      2024-01-25 15:22:54Z
    - Use Scalar::Util::reftype instead of ref to check for ARRAY (GH#132)
      (Jacques Deguest)

5.21      2023-08-23 16:02:14Z
    - Fix version declarations in icap.pm and icaps.pm (GH#131) (Olaf Alders)

5.20      2023-08-23 14:13:23Z
   - Remove Shebang and Taint from all tests.
   - Fix t/query.t to get rid of a warning about join() on
      array with undef
   - Add icap and icaps URIs (GH#130) (david-dick)

5.19      2023-04-30 16:15:58Z
   - Form parameters without values are now represented by undef (GH#65)
     (Gianni Ceccarelli)

5.18      2023-04-29 16:08:14Z
    - Add a GH workflow to test LWP::Curl (GH#116) (Olaf Alders)
    - Add documentation examples for the host() and ihost() methods (GH#28)
      (Sebastian Willing)
    - Remove colon from username:password if there is no password (GH#31)
      (David E. Wheeler, Joenio Marques da Costa, Julien Fiegehenn)
    - Prefix private methods with _ in URI::_punycode (GH#47) (David E Wheeler)

5.17      2022-11-02 17:03:48Z
    - Updated RFC references in the pod documentation for URI::file (GH#117)
      (Håkon Hgland)
    - Fix SIP URI encoder/decoder (GH#118) (ryankereliuk)

5.16      2022-10-12 13:10:40Z
    - Merge the methods from URI::QueryParam into URI, so they are always
      available (GH#114) (Graham Knop)

5.15      2022-10-11 14:48:28Z